openapi - get /projects
