# src/main/resources/static/openapi/codylab-talent-2025-openapi.yml
@@ -21,25 +21,108 @@ paths:
       operationId: getProjects
       tags:
         - Projects
+      parameters:
+        - $ref: '#/components/parameters/PageNumber'
+        - $ref: '#/components/parameters/Size'
+        - $ref: '#/components/parameters/Sort'
+        - name: ProjectFilter
+          in: query
+          description: Filtro per i progetti basato su ID utente o ID progetto.
+          required: false
+          style: form
+          explode: true
+          schema:
+            $ref: '#/components/schemas/ProjectFilter'
       responses:
         '200':
           description: Lista di progetti recuperata con successo.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Project'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Projects'
         '500':
           description: Errore interno del server.
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
 components:
+  headers:
+    total-count:
+      description: Total number of items in the response
+      schema:
+        type: integer
+        format: int32
+        examples:
+          - value: 100
+            summary: Total count of vehicles
+    page-size:
+      description: Number of items per page
+      schema:
+        type: integer
+        format: int32
+        examples:
+          - value: 10
+            summary: Default page size for vehicle listings
+    page-number:
+      description: Current page number (from 0)
+      schema:
+        type: integer
+        format: int32
+        examples:
+          - value: 0
+            summary: Current page number in the response
+
+  parameters:
+    PageNumber:
+      name: pageNumber
+      in: query
+      description: Numero della pagina da recuperare.
+      required: false
+      schema:
+        type: integer
+        format: int32
+        default: 0
+        examples:
+          - value: 0
+            summary: Pagina iniziale
+
+    Size:
+      name: size
+      in: query
+      description: Numero di elementi per pagina.
+      required: false
+      schema:
+        type: integer
+        format: int32
+        default: 10
+        examples:
+          - value: 10
+            summary: Dimensione della pagina
+    Sort:
+      name: sort
+      in: query
+      description: Criterio di ordinamento dei risultati.
+      required: false
+      schema:
+        type: string
+        examples:
+          - value: 'id,asc'
+            summary: Ordinamento per ID in ordine ascendente
+
   schemas:
-    Project:
+    Projects:
       type: object
       properties:
         id:
           type: integer
+          format: int64
           description: Identificativo univoco del progetto.
         codice:
           type: string
+          maxLength: 10
           description: Codice identificativo del progetto.
         nome:
           type: string
@@ -51,6 +134,9 @@ components:
           type: string
           format: date
           description: Data di inizio del progetto.
+          examples:
+            - value: '2025-01-01'
+              summary: Data di inizio del progetto
         durata:
           type: integer
           description: Durata del progetto in giorni.
@@ -70,3 +156,74 @@ components:
         descrizione:
           type: string
           description: Descrizione della task.
+    ProjectFilter:
+      type: object
+      properties:
+        userId:
+          type: integer
+          format: int64
+          description: ID dell'utente associato al progetto.
+        ids:
+          type: array
+          items:
+            type: integer
+            format: int64
+          description: Elenco degli ID dei progetti da filtrare.
+    Problem:
+      description: error occurred - see status code and problem object for more information.
+      type: object
+      properties:
+        type:
+          type: string
+          format: uri
+          description: |
+            An absolute URI that identifies the problem type.  When dereferenced,
+            it SHOULD provide human-readable documentation for the problem type
+            (e.g., using HTML).
+          default: "about:blank"
+          example: "https://zalando.github.io/problem/constraint-violation"
+        title:
+          type: string
+          description: |
+            A short, summary of the problem type. Written in english and readable
+            for engineers (usually not suited for non technical stakeholders and
+            not localized); example: Service Unavailable
+        status:
+          type: integer
+          format: int32
+          description: |
+            The HTTP status code generated by the origin server for this occurrence
+            of the problem.
+          minimum: 100
+          maximum: 600
+          exclusiveMaximum: true
+          example: 503
+        detail:
+          type: string
+          description: |
+            A human readable explanation specific to this occurrence of the
+            problem.
+          example: Connection to database timed out
+        instance:
+          type: string
+          format: uri
+          description: |
+            An absolute URI that identifies the specific occurrence of the problem.
+            It may or may not yield further information if dereferenced.
+        errorCategory:
+          type: string
+          description: The category of the error.
+          example: Invalid
+        fieldName:
+          type: string
+          description: The name of the field that caused the error.
+          example: phone
+        timestamp:
+          type: string
+          format: date-time
+          description: The timestamp when the error occurred.
+          example: "2024-11-13T10:42:21.263191453Z"
+        traceId:
+          type: string
+          description: The trace ID for the error.
+          example: "057b351ca8e8badf158357ecbb2edb73"
